--- a/src/LagoVista.UWP.UI/project.json
+++ b/src/LagoVista.UWP.UI/project.json
@@ -1,12 +1,12 @@
 ﻿{
   "dependencies": {
-    "LagoVista.Core": "1.2.264-alpha1443",
-    "LagoVista.Core.Authentication": "1.2.264-alpha1443",
-    "LagoVista.Core.Networking": "1.2.264-alpha1443",
-    "LagoVista.IoT.Logging": "1.2.264-alpha1443",
-    "LagoVista.UserAdmin.Models": "1.2.264-alpha1443",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "6.0.6",
-    "Newtonsoft.Json": "11.0.1-beta3"
+    "LagoVista.Core": "1.2.287-alpha0919",
+    "LagoVista.Core.Authentication": "1.2.287-alpha0919",
+    "LagoVista.Core.Networking": "1.2.287-alpha0919",
+    "LagoVista.IoT.Logging": "1.2.287-alpha0919",
+    "LagoVista.UserAdmin.Models": "1.2.287-alpha0919",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "6.0.7",
+    "Newtonsoft.Json": "11.0.1"
   },
   "frameworks": {
     "uap10.0.10586": {}
