--- a/src/LagoVista.XPlat.Core/LagoVista.XPlat.Core.csproj
+++ b/src/LagoVista.XPlat.Core/LagoVista.XPlat.Core.csproj
@@ -12,13 +12,13 @@
     <PackageReference Include="LagoVista.Core.Networking" Version="1.2.214-alpha1112" />
     <PackageReference Include="LagoVista.IoT.Logging" Version="1.2.214-alpha1112" />
     <PackageReference Include="LagoVista.UserAdmin.Models" Version="1.2.214-alpha1112" />
-    <PackageReference Include="Microsoft.AppCenter" Version="1.3.0" />
-    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.3.0" />
-    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.3.0" />
-    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="1.3.0" />
-    <PackageReference Include="Microsoft.AppCenter.Push" Version="1.3.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.1-beta3" />
-    <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
+    <PackageReference Include="Microsoft.AppCenter" Version="1.4.0" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.4.0" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.4.0" />
+    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="1.4.0" />
+    <PackageReference Include="Microsoft.AppCenter.Push" Version="1.4.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
+    <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
     <PackageReference Include="LagoVista.Core" Version="1.2.214-alpha1112" />
   </ItemGroup>
   <ItemGroup>
