--- a/src/LagoVista.Client.Core/LagoVista.Client.Core.csproj
+++ b/src/LagoVista.Client.Core/LagoVista.Client.Core.csproj
@@ -20,12 +20,12 @@
     <Content Include="Icons\ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core" Version="1.2.219-alpha1648" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="1.2.219-alpha1648" />
-    <PackageReference Include="LagoVista.Core.Networking" Version="1.2.219-alpha1648" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="1.2.219-alpha1648" />
-    <PackageReference Include="LagoVista.UserAdmin.Models" Version="1.2.219-alpha1648" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.1-beta1" />
+    <PackageReference Include="LagoVista.Core" Version="1.2.181-alpha1716" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="1.2.181-alpha1716" />
+    <PackageReference Include="LagoVista.Core.Networking" Version="1.2.181-alpha1716" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.346-beta1435" />
+    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.346-beta1435" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Resources\ClientResources.Designer.cs">
