--- a/src/LagoVista.XPlat.Core/LagoVista.XPlat.Core.csproj
+++ b/src/LagoVista.XPlat.Core/LagoVista.XPlat.Core.csproj
@@ -8,13 +8,13 @@
     <None Remove="Package.nuspec" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core.Authentication" Version="1.2.219-alpha1648" />
-    <PackageReference Include="LagoVista.Core.Networking" Version="1.2.219-alpha1648" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="1.2.219-alpha1648" />
-    <PackageReference Include="LagoVista.UserAdmin.Models" Version="1.2.219-alpha1648" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.1-beta1" />
-    <PackageReference Include="Xamarin.Forms" Version="2.5.0.121934" />
-    <PackageReference Include="LagoVista.Core" Version="1.2.219-alpha1648" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.346-beta1435" />
+    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.346-beta1435" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.346-beta1435" />
+    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.346-beta1435" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Xamarin.Forms" Version="2.5.1.527436" />
+    <PackageReference Include="LagoVista.Core" Version="1.2.181-alpha1716" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LagoVista.Client.Core\LagoVista.Client.Core.csproj" />
