--- a/src/LagoVista.XPlat.Droid/LagoVista.XPlat.Droid.csproj
+++ b/src/LagoVista.XPlat.Droid/LagoVista.XPlat.Droid.csproj
@@ -72,19 +72,19 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="LagoVista.Core">
-      <Version>1.2.303-alpha1026</Version>
+      <Version>2.1.393-beta1324</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Authentication">
-      <Version>1.2.303-alpha1026</Version>
+      <Version>2.1.393-beta1324</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Networking">
-      <Version>1.2.303-alpha1026</Version>
+      <Version>2.1.393-beta1324</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Logging">
-      <Version>1.2.303-alpha1026</Version>
+      <Version>2.1.393-beta1324</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.UserAdmin.Models">
-      <Version>1.2.303-alpha1026</Version>
+      <Version>2.1.393-beta1324</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter">
       <Version>1.7.0</Version>
@@ -105,7 +105,7 @@
       <Version>11.0.2</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>3.1.0.583944</Version>
+      <Version>3.1.0.637273</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
