--- a/src/LagoVista.XPlat.iOS/packages.config
+++ b/src/LagoVista.XPlat.iOS/packages.config
@@ -5,13 +5,13 @@
   <package id="LagoVista.Core.Networking" version="2.1.439-beta1607" targetFramework="xamarinios10" />
   <package id="LagoVista.IoT.Logging" version="2.1.439-beta1607" targetFramework="xamarinios10" />
   <package id="LagoVista.UserAdmin.Models" version="2.1.439-beta1607" targetFramework="xamarinios10" />
-  <package id="Microsoft.AppCenter" version="1.8.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.AppCenter.Analytics" version="1.8.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.AppCenter.Crashes" version="1.8.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.AppCenter.Distribute" version="1.8.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.AppCenter.Push" version="1.8.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter" version="1.9.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Analytics" version="1.9.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Crashes" version="1.9.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Distribute" version="1.9.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Push" version="1.9.0" targetFramework="xamarinios10" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.NETCore.Platforms" version="2.1.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.NETCore.Platforms" version="2.1.1" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="xamarinios10" />
@@ -64,5 +64,5 @@
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="3.2.0.637442-pre1" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="3.1.0.697729" targetFramework="xamarinios10" />
 </packages>
